--- a/blazor-impots/BlazorImpots.csproj
+++ b/blazor-impots/BlazorImpots.csproj
@@ -6,8 +6,11 @@
       https://dotnet.myget.org/F/aspnetcore-dev/api/v3/index.json;
       https://dotnet.myget.org/F/blazor-dev/api/v3/index.json;
     </RestoreAdditionalProjectSources>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>8.0</LangVersion>
     <RazorLangVersion>3.0</RazorLangVersion>
+    <RootNamespace>BlazorImpots</RootNamespace>
+    <AssemblyName>BlazorImpots</AssemblyName>
+    <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
 
   <ItemGroup>
