Event ajout de revenu

--- a/blazor-impots/BlazorImpots.csproj
+++ b/blazor-impots/BlazorImpots.csproj
@@ -9,7 +9,7 @@
     <LangVersion>8.0</LangVersion>
     <RazorLangVersion>3.0</RazorLangVersion>
     <RootNamespace>BlazorImpots</RootNamespace>
-    <AssemblyName>BlazorImpots</AssemblyName>
+    <AssemblyName>blazor-impots</AssemblyName>
     <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
 
